--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Olimp&iacute;ada Pernambucana de Inform&aacute;tica</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109129944-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-109129944-3');
+    </script>
 </head>
 
 <body>
